kubeflow/apps/pipelines/build/k8s/networking.istio.io_v1alpha3_destinationrule_ml-pipeline-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: networking.istio.io|DestinationRule|default|ml-pipeline-ui
  labels:
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  host: ml-pipeline-ui.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
